[feature] Adding translation fr/en with i18n on all pages

--- a/src/web/locales/fr/index.json
+++ b/src/web/locales/fr/index.json
@@ -1,25 +1,33 @@
 {
     "SignUp": "S'inscrire",
-    "HeroUnit1": "Vous voulez rester à jour sur vos sujets favoris ?",
-    "HeroUnit2": "Pas assez de temps pour lire tous vos newsletters ?",
-    "HeroUnit3": "Vous voulez gagner du temps dans vos recherches ?",
-    "HeroUnit4": "CURATOR AI est fait pour vous",
-    "TryIt": "Essayez-le maintenant !",
-    "Expln1": "Votre curateur de news personnalisé",
-    "Expln2": "Définissez vos préférences par e-mail et recevez une newsletter qui vous convient !",
-    "Qu1": "Qu'est-ce que Curator AI ?",
-    "Answ1": "Curator AI est un outil pour toujours rester à jour avec vos newsletters.",
-    "Qu2": "Pourquoi devrais-je utiliser Curator AI ?",
-    "Answ2": "Cela améliorera grandement votre gestion du temps.",
-    "Qu3": "Comment fonctionne Curator AI ?",
-    "Answ3": "Curator AI est principalement alimenté par l'API OpenAI. Toute la configuration peut être effectuée par e-mail.",
+    "HeroUnit1": "Un outil alimenté par l'IA",
+    "HeroUnit2": "pour être le mieux informé",
+    "HeroUnit3": "Vous voulez rester à jour sur vos sujets favoris ?",
+    "HeroUnit4": "Pas assez de temps pour lire toutes vos newsletters ?",
+    "HeroUnit5": "Vous voulez gagner du temps dans vos recherches ?",
+    "HeroUnit6": "CURATOR AI est fait pour vous",
+    "TryIt": "→ Essayez-le maintenant !",
+    "Expln1": "Votre curateur de nouvelles personnalisé",
+    "Expln2": "Définissez vos préférences par email et recevez une newsletter qui <b>vous correspond !</b>",
+    "ImgSampleAlt": "Image d'un exemple de mail. Chaque nouvelle a un titre et une brève description faite par l'IA",
+    "How": "Comment fonctionne Curator AI ?",
+    "HowAnsw1": "Curator AI est principalement alimenté par l'API OpenAI.",
+    "HowAnsw2": "Vous recevez un email après vous être abonné au service pour configurer le curateur selon vos préférences.",
+    "HowAnsw3": "Vous spécifiez les thèmes sur lesquels vous souhaitez être informé, ou donnez simplement des liens !",
+    "HowAnsw4": "Il y a plusieurs autres paramètres à personnaliser.",
+    "HowAnsw5": "Créez la newsletter qui vous correspond !",
+    "Why": "Pourquoi devrais-je utiliser Curator AI ?",
+    "WhyAnsw1": "Vous êtes abonné à des dizaines et des dizaines de newsletters ?",
+    "WhyAnsw2": "Vous n'avez pas le temps de lire un roman de nouvelles ?",
+    "WhyAnsw3": "Vous ne trouvez pas les nouvelles que vous cherchez ?",
+    "WhyAnsw4": "Alors Curator AI est exactement ce que vous recherchez !",
     "ListComments": "Voici quelques avis de nos utilisateurs :",
-    "Comment1": "Tellement incroyable, beaucoup d'émerveillement",
+    "Comment1": "Tellement impressionné, wow",
     "User1": "Doge",
-    "Comment2": "Tellement de surprises, très impressionnant",
+    "Comment2": "Tellement surpris, très impressionné",
     "User2": "Un Doge impressionné",
-    "Comment3": "Tellement rapide, très rapide, waouh",
+    "Comment3": "Tellement rapide, très rapide, wow",
     "User3": "Doge actionnaire",
-    "Comment4": "Tellement de code, tellement intelligent, waouh",
+    "Comment4": "Tellement de code, très intelligent, wow",
     "User4": "Un Doge expert"
 }
