--- a/src/web/locales/en/index.json
+++ b/src/web/locales/en/index.json
@@ -1,18 +1,26 @@
 {
     "SignUp": "Sign Up",
-    "HeroUnit1": "Want to stay updated on your favorite topics?",
-    "HeroUnit2": "Not enough time to read all your newsletters?",
-    "HeroUnit3": "Want to save time on your research?",
-    "HeroUnit4": "CURATOR AI is made for you",
-    "TryIt": "Try it now!",
+    "HeroUnit1": "An AI-powered tool",
+    "HeroUnit2": "to be the best informed",
+    "HeroUnit3": "Want to stay updated on your favorite topics?",
+    "HeroUnit4": "Not enough time to read all your newsletters?",
+    "HeroUnit5": "Want to save time on your research?",
+    "HeroUnit6": "CURATOR AI is made for you",
+    "TryIt": "→ Try it now!",
     "Expln1": "Your personalized news curator",
-    "Expln2": "Set your email preferences and receive a newsletter that suits you!",
-    "Qu1": "What is Curator AI ?",
-    "Answ1": "Curator AI is a tool to always be up to date with you newsletters.",
-    "Qu2": "Why should I use Curator AI ?",
-    "Answ2": "It will greatly improve you time.",
-    "Qu3": "How does Curator AI works ?",
-    "Answ3": "Curator AI is powered mainly by the OpenAI API. All the configuration can be made through mails.",
+    "Expln2": "Set your email preferences and receive a newsletter that <b>suits you!</b>",
+    "ImgSampleAlt": "Picture of a sample email. Each news has a title and a brief descritpion maid by the AI",
+    "How": "How does Curator AI works ?",
+    "HowAnsw1": "Curator AI is mainly powered by the OpenAI API. ",
+    "HowAnsw2": "You recieve an email after subscribing to the service to configure the curator to your preferences. ",
+    "HowAnsw3": "You specify themes you would like to be inform on, or simply give links ! ",
+    "HowAnsw4": "There are severable other parameters to customize ",
+    "HowAnsw5": "Create the newsletter that suits you !",
+    "Why": "Why should I use Curator AI ?",
+    "WhyAnsw1": "Are you subscribe to dozens and dozens of newsletters ?",
+    "WhyAnsw2": "You don't have the time to read a novel of news ?",
+    "WhyAnsw3": "You cannot find the news you are looking for ?",
+    "WhyAnsw4": "Then Curator AI is exactly what you are looking for !",
     "ListComments": "Here are some reviews of our users :",
     "Comment1": "Such wow, much amaze",
     "User1": "Doge",
