[style] Added boxes to improve customisation description

--- a/src/web/locales/en/index.json
+++ b/src/web/locales/en/index.json
@@ -7,8 +7,11 @@
     "HeroUnit5": "Want to save time on your research?",
     "HeroUnit6": "CURATOR AI is made for you",
     "TryIt": "→ Try it now!",
-    "Expln1": "Your personalized news curator",
-    "Expln2": "Set your email preferences and receive a newsletter that <b>suits you!</b>",
+    "Custom0": "Customizable",
+    "Custom1": "Your personalized news curator",
+    "Custom2": "Set your email preferences and receive a newsletter that <b>suits you!</b>",
+    "Custom-box1":"Choose the piece of news you want to follow",
+    "Custom-box2":"Set when you want to reveive your news : daily, weekly, on fridays...",
     "ImgSampleAlt": "Picture of a sample email. Each news has a title and a brief descritpion maid by the AI",
     "How": "How does Curator AI works ?",
     "HowAnsw1": "Curator AI is mainly powered by the OpenAI API. ",
