--- a/src/web/locales/fr/index.json
+++ b/src/web/locales/fr/index.json
@@ -7,8 +7,11 @@
     "HeroUnit5": "Vous voulez gagner du temps dans vos recherches ?",
     "HeroUnit6": "CURATOR AI est fait pour vous",
     "TryIt": "→ Essayez-le maintenant !",
-    "Expln1": "Votre curateur de nouvelles personnalisé",
-    "Expln2": "Définissez vos préférences par email et recevez une newsletter qui <b>vous correspond !</b>",
+    "Custom0": "Customisable",
+    "Custom1": "Votre curateur de nouvelles personnalisé",
+    "Custom2": "Définissez vos préférences par email et recevez une newsletter qui <b>vous correspond !</b>",
+    "Custom-box1":"Choississez les informations que vous souhaitez suivre",
+    "Custom-box2":"Choississez quand recevoir vos news : journalier, hebdomadaire, les mardis...",
     "ImgSampleAlt": "Image d'un exemple de mail. Chaque nouvelle a un titre et une brève description faite par l'IA",
     "How": "Comment fonctionne Curator AI ?",
     "HowAnsw1": "Curator AI est principalement alimenté par l'API OpenAI.",
