[style] Added some titles

--- a/src/web/locales/fr/index.json
+++ b/src/web/locales/fr/index.json
@@ -13,12 +13,14 @@
     "Custom-box1":"Choississez les informations que vous souhaitez suivre",
     "Custom-box2":"Choississez quand recevoir vos news : journalier, hebdomadaire, les mardis...",
     "ImgSampleAlt": "Image d'un exemple de mail. Chaque nouvelle a un titre et une brève description faite par l'IA",
+    "How0" : "Fonctionnement sur l'IA",
     "How": "Comment fonctionne Curator AI ?",
     "HowAnsw1": "Curator AI est principalement alimenté par l'API OpenAI.",
     "HowAnsw2": "Vous recevez un email après vous être abonné au service pour configurer le curateur selon vos préférences.",
     "HowAnsw3": "Vous spécifiez les thèmes sur lesquels vous souhaitez être informé, ou donnez simplement des liens !",
     "HowAnsw4": "Il y a plusieurs autres paramètres à personnaliser.",
     "HowAnsw5": "Créez la newsletter qui vous correspond !",
+    "Why0" : "Pour les newsletters envahissantes",
     "Why": "Pourquoi devrais-je utiliser Curator AI ?",
     "WhyAnsw1": "Vous êtes abonné à des dizaines et des dizaines de newsletters ?",
     "WhyAnsw2": "Vous n'avez pas le temps de lire un roman de nouvelles ?",
