--- a/src/web/locales/en/index.json
+++ b/src/web/locales/en/index.json
@@ -13,12 +13,14 @@
     "Custom-box1":"Choose the piece of news you want to follow",
     "Custom-box2":"Set when you want to reveive your news : daily, weekly, on fridays...",
     "ImgSampleAlt": "Picture of a sample email. Each news has a title and a brief descritpion maid by the AI",
+    "How0": "AI powered",
     "How": "How does Curator AI works ?",
     "HowAnsw1": "Curator AI is mainly powered by the OpenAI API. ",
-    "HowAnsw2": "You recieve an email after subscribing to the service to configure the curator to your preferences. ",
+    "HowAnsw2": "You receive an email after subscribing to the service to configure the curator to your preferences. ",
     "HowAnsw3": "You specify themes you would like to be inform on, or simply give links ! ",
     "HowAnsw4": "There are severable other parameters to customize ",
     "HowAnsw5": "Create the newsletter that suits you !",
+    "Why0": "For overwhelming newsletters",
     "Why": "Why should I use Curator AI ?",
     "WhyAnsw1": "Are you subscribe to dozens and dozens of newsletters ?",
     "WhyAnsw2": "You don't have the time to read a novel of news ?",
